[project]
name = "ubahn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dylan Bragdon", email = "dylan.bragdon@gmail.com" }
]
dependencies = [
    "ampy>=0.1.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ubahn"]
